# Physim

./: .gitignore  CMakeLists.txt  CMakeLocalTemplate.txt  KnitroSolverConfig.opt  README.md  Readme.txt
Maple/: DiscreteShellsBending.mw  DiscreteShellsBending_Dihedral.mcg  DiscreteShellsBending_Hessian.mcg  DiscreteShellsBending_Shape.mcg  FEMMem_CoNH.mw  FEMMem_InNH.mw  FEMMem_Simplest.mw  FEMMem_StVk.mw  FEMVol_CoMR.mw  FEMVol_CoNH.mw  FEMVol_CoNH_Test.mw  FEMVol_StVk.mw  FaceNodeColl_Quad.mw  NormalAlignment.mw  NormalAlignment_Energy.mcg  NormalAlignment_Gradient.mcg  NormalAlignment_Hessian.mcg  PositionAlignment.mw  PositionAlignment_Gradient.mcg  PressureConstant.mw  RigidBodyNodeJacobian_Euler.mw  RigidBodyNodeJacobian_Quat.mw  RodEdge3DJacobianOPT.mcg  SpringCross.mw  SpringHinge.mw  SpringLinear.mw  quaternionNormalized.h
examples/Geometry_SurfaceSampler/: CMakeLists.txt
examples/Geometry_SurfaceSampler/source/: Example.cpp
examples/SimulatorLite_Cylinders/: CMakeLists.txt
examples/SimulatorLite_Cylinders/source/: Example.cpp
examples/SimulatorLite_EmbeddedRigid/: CMakeLists.txt
examples/SimulatorLite_EmbeddedRigid/assets/: SoftBody.ele  SoftBody.face  SoftBody.node
examples/SimulatorLite_EmbeddedRigid/source/: Example.cpp
examples/Simulator_CompositeWithCollisions/: CMakeLists.txt
examples/Simulator_CompositeWithCollisions/source/: Example.cpp
include/PhySim/: BasicTypes.h  CommonIncludes.h  MatrixSd.h  Traits.h
include/PhySim/Geometry/: Geometry.h
include/PhySim/Geometry/Meshes/: Curve.h  Mesh.h  Mesh_Cell.h  Mesh_DER.h  Mesh_Edge.h  Mesh_Face.h  Mesh_Frame.h  Mesh_Grid.h  Mesh_GridCoarsen.h  Mesh_Hexa.h  Mesh_Quad.h  Mesh_Tetra.h  Mesh_Tri.h  Rod.h
include/PhySim/Geometry/Partition/: BVHTree.h  KDTree.h
include/PhySim/Geometry/Polytopes/: Cell.h  Cell_Hexa.h  Cell_Poly.h  Cell_Tetra.h  Edge.h  Embedding.h  Face.h  Face_Poly.h  Face_Quad.h  Face_Tri.h  Interpolations.h  Node.h  Poly.h  Quadratures.h  ShapeFunctions.h
include/PhySim/Geometry/Samplers/: SurfaceSampler.h  SurfaceSampler_Poisson.h  SurfaceSampler_Uniform.h
include/PhySim/Geometry/Volumes/: DistanceField.h  DistanceField_Mesh.h  DistanceField_Sphere.h  ScalarField.h  ScalarField_Grid.h
include/PhySim/Kinematics/: KEleDER.h  KEleParticle3D.h  KEleRigidBody3D.h  KMapEmbedding.h  KMapIdentity.h  KMapLinear.h  KMapRB2Particle3D.h  KMapSplit.h  KinematicsEle.h  KinematicsMap.h  KinematicsTree.h
include/PhySim/Physics/: DoFSet.h  DomainDistribution.h  Layer.h
include/PhySim/Physics/Boundary/: BC_AlignFace.h  BC_Collisions.h  BC_FixDoF.h  BC_FixDoFPartial.h  BC_Force.h  BC_Gravity.h  BC_NodeInCurve.h  BC_PlaneColl.h  BCondition.h  IBCondition.h
include/PhySim/Physics/Colliders/: Collider.h  Collider_SphereCloud.h
include/PhySim/Physics/Elements/: ConstraintSet.h  ConstraintSet_AlignFace.h  ConstraintSet_FixedPosition.h  ConstraintSet_NodeInCurve.h  ConstraintSet_NodeNodeColl.h  ConstraintSet_NodePlaneColl.h  EnergyElement.h  EnergyElement_AlignFace.h  EnergyElement_AlignNode.h  EnergyElement_DER_BendTwist.h  EnergyElement_DER_Connection.h  EnergyElement_DER_Stretch.h  EnergyElement_DiscreteShells.h  EnergyElement_FEM.h  EnergyElement_FaceNodeColl_LogB.h  EnergyElement_FaceNodeColl_Quad.h  EnergyElement_FaceNodeColl_Step.h  EnergyElement_Force.h  EnergyElement_Gravity.h  EnergyElement_SixDJoint.h  EnergyElement_SoftConstraint.h  EnergyElement_SpringBetwNodes.h  EnergyElement_SpringCross.h  EnergyElement_SpringHinge.h  EnergyElement_SpringLinear.h  IConstraintSet.h  IEnergyElement.h  IMassElement.h  MassElement.h  MassElement_DEREdge.h  MassElement_Lumped.h  MassElement_RigidBody.h  MaterialModels.h
include/PhySim/Physics/Simulables/: Simulable.h  Simulable_Composite.h  Simulable_DER.h  Simulable_FEM.h  Simulable_FEM_Surface.h  Simulable_FEM_Volume.h  Simulable_MassSpring.h  Simulable_Mesh.h  Simulable_RB.h  Simulable_SpineModel.h  Simulable_ThinShell.h
include/PhySim/Solvers/: LinearSolver.h  LinearSolver_BiCGSTAB.h  LinearSolver_CholmodLDLT.h  LinearSolver_CudaSC.h  LinearSolver_EigenCG.h  LinearSolver_EigenLDLT.h  LinearSolver_SSparseSPQR.h  OptimProblem.h  OptimProblem_BasicDynamic.h  OptimProblem_BasicStatic.h  OptimSolver.h  OptimSolver_Knitro.h  OptimSolver_USQP_LS.h
include/PhySim/Utils/: CUDAUtils.h  CustomTimer.h  DerivativeAssembler.h  DomainDistribution.h  EnergyUtils.h  GeometryFilters.h  GeometryUtils.h  IOUtils.h  Interpolation.h  MathUtils.h  MatrixUtils.h  MeshUtils.h  ParameterSet.h  Serializer_Field.h  Serializer_Mesh.h  Serializer_XML.h  Signal.h  Simulator.h  SpatialDeformer.h  SpatialDistribution.h  Utils.h  VectorAnimators.h  format.clang-format
include/PhySim/Utils/Auto/: DiscreteShellsBending_Energy.mcg  DiscreteShellsBending_Gradient.mcg  DiscreteShellsBending_HessianSPD.mcg  FEMMem_Simplest_Energy.mcg  FEMMem_Simplest_Gradient.mcg  FEMMem_Simplest_Hessian.mcg  RodEdge3DEnergyOPT.mcg  (+23 more)
source/PhySim/: BasicTypes.cpp  CommonIncludes.cpp  EigenNatvis.natvis  Traits.cpp
source/PhySim/Extensions/: CoarsenedSimulationPro.cpp
source/PhySim/Geometry/: Geometry.cpp
source/PhySim/Kinematics/: KEleDER.cpp  KEleParticle3D.cpp  KEleRigidBody3D.cpp  KMapEmbedding.cpp  KMapIdentity.cpp  KMapLinear.cpp  KMapRB2Particle3D.cpp  KMapSplit.cpp  KinematicsEle.cpp  KinematicsMap.cpp  KinematicsTree.cpp
source/PhySim/Physics/: DoFSet.cpp  Layer.cpp
source/PhySim/Simulations/: Module_SimulatorRigidBody.cpp
source/PhySim/Solvers/: LinearSolver.cpp  LinearSolver_BiCGSTAB.cpp  LinearSolver_CholmodLDLT.cpp  LinearSolver_CudaSC.cpp  LinearSolver_EigenCG.cpp  LinearSolver_EigenLDLT.cpp  LinearSolver_SSparseSPQR.cpp  OptimProblem.cpp  OptimProblem_BasicDynamic.cpp  OptimProblem_BasicStatic.cpp  OptimSolver.cpp  OptimSolver_Knitro.cpp  OptimSolver_USQP_LS.cpp
source/PhySim/Utils/: CUDAUtils.cpp  DerivativeAssembler.cpp  EnergyUtils.cpp  GeometryFilters.cpp  GeometryUtils.cpp  IOUtils.cpp  Interpolation.cpp  MathUtils.cpp  MatrixUtils.cpp  MeshUtils.cpp  ParameterSet.cpp  Serializer_Field.cpp  Serializer_XML.cpp  Simulator.cpp  Utils.cpp  VectorAnimators.cpp
(+99 files in other folders)
